fixed issue with head being cut off at more than 100% zoom

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -67,6 +67,7 @@ html {
     bottom: 0;
     width: 18rem;
     text-align: left;
+    overflow-y: auto;
   }
 }
 
@@ -107,10 +108,8 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    position: absolute;
-    right:  1rem;
-    bottom: 1rem;
-    left:   1rem;
+    position: relative;
+    padding: 1rem;
   }
 }
 
